# trobot

./: .clang-format  CMakeLists.txt  README.md
inc/parts/: pins.hpp
inc/units/: motors.hpp
src/: CMakeLists.txt
src/parts/: CMakeLists.txt  pins.cpp
src/units/: CMakeLists.txt  motors.cpp
test/: CMakeLists.txt
test/parts/: CMakeLists.txt  pins_test.cpp
